# python-jni-bridge

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
hardtimes-client-core-platform/python/lib/linux-x64/: python
hardtimes-client-core-platform/python/lib/linux-x64/include/: pyconfig.h
hardtimes-client-core-platform/python/lib/linux-x64/lib-dynload/: _sysconfigdata__linux_x86_64-linux-gnu.py
hardtimes-client-core-platform/python/lib/macos-x64/include/: pyconfig.h
hardtimes-client-core-platform/python/lib/macos-x64/lib-dynload/: _sysconfigdata__darwin_darwin.py
hardtimes-client-core-platform/python/lib/windows-x64/lib-dynload/: TCL_LIBRARY.env  _asyncio.exp  _asyncio.lib  _asyncio.pyd  _bz2.exp  _bz2.lib  _bz2.pyd  _ctypes.exp  _ctypes.lib  _ctypes.pyd  _ctypes_test.exp  _ctypes_test.lib  _ctypes_test.pyd  _decimal.exp  _decimal.lib  _decimal.pyd  _elementtree.exp  _elementtree.lib  _elementtree.pyd  _hashlib.exp  _hashlib.lib  _hashlib.pyd  _lzma.exp  _lzma.lib  _lzma.pyd  _msi.exp  _msi.lib  _msi.pyd  _multiprocessing.exp  _multiprocessing.lib  _multiprocessing.pyd  _overlapped.exp  _overlapped.lib  _overlapped.pyd  (+62 more)
hardtimes-client-core-platform/python/python/: enum.py  inspect.py  ntpath.py
hardtimes-client-core-platform/python/python/test/: test_ast.py  test_enum.py  test_inspect.py  test_syntax.py  test_urllib2.py
hardtimes-client-core-platform/python/python/urllib/: error.py
modules/app/: CMakeLists.txt
modules/app/src/: app.cpp
modules/main/: CMakeLists.txt
modules/main/src/: App.h  FakeGameSupervisor.cpp  FakeGameSupervisor.h  GameSupervisor.h  Platform.h  ScriptRequest.h  ScriptResponse.h  ScriptSupervisor.cpp  ScriptSupervisor.h
modules/main/src/jni/: JNIGameSupervisor.cpp  JNIGameSupervisor.h  JNIScriptSupervisor.cpp  JNIScriptSupervisor.h
(+101 files in other folders)
